--- a/Docusaurus/blog/authors.yml
+++ b/Docusaurus/blog/authors.yml
@@ -1,3 +1,15 @@
+lantry-glitch:
+  name: Allan Kwek
+  title: Jungler
+  url: https://github.com/lantry-glitch
+  image_url: https://github.com/lantry-glitch.png
+
+Dardrich:
+  name: Darren Aldrich
+  title: Sniper
+  url: https://github.com/Dardrich
+  image_url: https://github.com/Dardrich.png
+
 yangshun:
   name: Yangshun Tay
   title: Front End Engineer @ Facebook
